added h1 test tag

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Mooli&family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <h1>Test</h1>
  <script src="../JS/script.js"></script>   
 </body>
 </html>
