--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Mooli&family=Mukta:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Test</h1>
+    <!-- Container -->
+     <div class="container"></div>
+    <!-- End of Container -->
  <script src="../JS/script.js"></script>   
 </body>
 </html>
