fleshed out div class

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,21 @@
 </head>
 <body>
     <!-- Container -->
-     <div class="container"></div>
+     <div class="container">
+        <!-- Header -->
+         <header>
+            <!-- Banner -->
+             <div class="banner">
+                <h1>Create</h1>
+                <h3>Modern and Beautiful Themes</h3>
+                <a href="#">
+                    <button type="button">Join Today</button>
+                </a>
+             </div>
+             <!-- End of Banner -->
+         </header>
+         <!-- End of Header -->
+     </div>
     <!-- End of Container -->
  <script src="../JS/script.js"></script>   
 </body>
