added background classes to index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,6 +24,15 @@
                 </a>
              </div>
              <!-- End of Banner -->
+
+             <!-- Backgrounds  -->
+             <div class="backgrounds">
+                <div class="bg-main"></div>
+                <div class="bg-1"></div>
+                <div class="bg-2"></div>
+               </div>
+              <!-- End of backgrounds -->
+               
          </header>
          <!-- End of Header -->
      </div>
