--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,12 +13,44 @@
 <body>
     <!-- Container -->
      <div class="container">
+        <!-- Navigation -->
+         <nav class="navbar">
+            <!-- Logo -->
+             <a href="index.html">
+                <div class="logo">
+                    <span>Code And<span>Create</span></span>
+                    <span>Templates</span>
+                </div>
+             </a>
+             <!-- End of Logo -->
+
+             <!-- Nav Items -->
+              <ul class="nav-items">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="clients.html" class="nav-link">Clients</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="account.html" class="nav-link">Account</a>
+                </li>
+                <li class="nav-item">
+                    <a href="pricing.html" class="nav-btn">Pricing</a>
+                </li>
+              </ul>
+             <!-- End of Nav Items -->
+         </nav>
+         <!-- End of Naviagtion -->
         <!-- Header -->
          <header>
             <!-- Banner -->
              <div class="banner">
-                <h1>Create</h1>
-                <h3>Modern and Beautiful Themes</h3>
+                <h1>Rosenthal</h1>
+                <h3>Modern Web Design</h3>
                 <a href="#">
                     <button type="button">Join Today</button>
                 </a>
