styled logo in style.css

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,8 +18,8 @@
             <!-- Logo -->
              <a href="index.html">
                 <div class="logo">
-                    <span>Code And<span>Create</span></span>
-                    <span>Templates</span>
+                    <span>Modern And <span>Chic</span></span>
+                    <span>Websites</span>
                 </div>
              </a>
              <!-- End of Logo -->
@@ -52,7 +52,7 @@
                 <h1>Rosenthal</h1>
                 <h3>Modern Web Design</h3>
                 <a href="#">
-                    <button type="button">Join Today</button>
+                    <button type="button">Learn More</button>
                 </a>
              </div>
              <!-- End of Banner -->
